radarr/tmp.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  containers:
    - image: busybox
      name: busybox
      command:
        - sleep
        - "3600"
      volumeMounts:
        - name: data
          mountPath: "/data"
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: lidarr
