radarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: servarr
spec:
  ports:
    - name: web
      port: 7878
      targetPort: web
  selector:
    app: radarr
  type: ClusterIP
