radarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: radarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.monroe.gg`)
      priority: 10
      services:
        - kind: Service
          name: radarr
          namespace: servarr
          port: 7878
  tls:
    certResolver: porkbun
